# Motion-Learning-Toolbox

./: .flake8  .gitignore  Lincense.md  Readme.md  pyproject.toml  setup.py
examples/: data.csv  demo.ipynb
motion_learning_toolbox/: __init__.py  canonicalize_quaternions.py  encoding.py  fix_controller_mapping.py  resample.py  resampling.py  to_acceleration.py  to_body_relative.py  to_velocity.py
tests/: test_canonicalize_quaternions.py  test_controller_mapping.py  test_data.csv  test_resample.py  test_to_body_relative.py  test_to_velocity.py
